# t-ccd

./: .gitignore  Cargo.toml  README.md  brute_force_collision_validator.py  collision_detection_analyis.ipynb  collision_detection_analysis.ipynb  collision_detection_analysis_notebook.ipynb  pyproject.toml
analysis/: collision_detection_analysis.ipynb
engine/: Cargo.toml
engine/src/: circle.rs  lib.rs  mesh.rs  particle.rs  render.rs  shader.wgsl
simulator/: Cargo.toml
simulator/src/: cli.rs  detector.rs  main.rs  miscs.rs  particle.rs  solver.rs  spatial.rs
src/tccd/: __init__.py  cli.py  config.py  models.py  pyproject.toml  test.py
src/tccd/analysis/: __init__.py  analyzer.py
src/tccd/validation/: __init__.py  data_loader.py  detector.py  results.py  validator.py
tests/: __init__.py  test_collision_analysis.py
validate/: Cargo.toml
validate/src/: boundary.rs  buffered_reader.rs  cli.rs  frame_window.rs  main.rs  miscs.rs
validate/src/validator/: boundary.rs  comp.rs  conservation.rs  error.rs  event.rs  missed_collision.rs  mod.rs  overlaps.rs  report.rs
validation/: .gitignore  pyproject.toml
validation/src/: analyzer.py  cli.py  data_loader.py  detector.py  results.py  validator.py
