[workspace.package]
edition = "2024"
version = "0.1.0"
description = "A 2D particle simulation with continuous collision detection and CSV output."
license = "MIT"
repository = "https://github.com/DestinEcarma/t-ccd"

[workspace]
resolver = "3"
members = ["engine", "simulator"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
