[package]
name = "simulator"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
csv = "1.3.1"
engine = { path = "../engine" }
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
glam = "0.30.5"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.222", features = ["derive"] }
winit = "0.30.12"
