[package]
name = "simulator"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
engine = { path = "../engine" }
env_logger = { version = "0.11.8", default-features = false, features = [ "auto-color" ] }
glam = "0.30.8"
log = "0.4.28"
num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
winit = "0.30.12"
